Improve chat readability in small windows
User commands and app replies share a full-width bubble format, and
errors rely on color to stand out. The header also takes up valuable
conversation space in short windows.

Make user commands compact and right-aligned, add a visible error
heading, and shrink the header when the window is short. Preserve wide
app replies so detailed task information remains easy to read.

Add GUI regression tests and update the visual test plan to cover
wrapping, alignment, error headings, and header resizing.

Validation: 201 unit tests, 22 console cases, and both Checkstyle checks
pass under Java 25. Inspect normal and small-window previews.